Minor kickoff event slide cleanup

--- a/kickoff_event.html
+++ b/kickoff_event.html
@@ -29,12 +29,10 @@
   <body>
     <div class="reveal">
       <div class="slides">
-        <section>
-          <div data-markdown>
-            ![startupbus_uk](images/startupbus_uk.png)
+        <section data-markdow>
+          ![startupbus_uk](images/startupbus_uk.png)
 
-            ## StartupBus UK 2016
-          </div>
+          ## StartupBus UK 2016
         </section>
 
         <section>
@@ -61,7 +59,10 @@ This initial event in 2010 started a movement, and a community was built around 
 
 Now the competition runs annually in:
 
+...
 ">
+          First event took place in 2010.
+
           Now an annual competition in:
 
           * Europe
@@ -136,10 +137,65 @@ tunisia
             ![press](images/kickoff_event/press.png)
           </section>
 
+          <section data-markdown data-notes="
+Buses have actually broke down during the competition.
+">
+            ## Why a bus?
+
+            * Poor Wi-Fi
+            * Uncomfortable working space
+            * Lack of sleep
+          </section>
+
           <section data-markdown>
+            United startup ecosystems in different countries
+          </section>
+
+          <section data-markdown data-notes="
+Forces them to be adaptable...
+
+...something you *have* to be to survive as an entrepreneur.
+">
+            ### People Accelerator
+
+            Pushing participants to their limits
+
+            Forces them to be adaptable
+
+            Bootstraps participants to build products and companies
+
+            Creates strong networks that can be used in the future
+          </section>
+
+          <section data-markdown>
+            ### Alumni Network
+
+            The core of StartupBus.
+
+            * More than 1000 alumni
+            * Strong community that helps each other
+            * Working at top tech companies or founding their own
+          </section>
+
+          <section data-markdown data-notes="
+After six years, alumni have gone on to found dozens of successful companies.
+
+The companies behind are just a few founded by alumni.
+
+Instacart in the US is currently valued at $2 billion.
+
+Mondo, or now Monzo, was also created by StartupBus alumni.
+
+Many of these companies have also been acquired by companies such as Facebook,
+Microsoft and Twitter.
+">
             ### Alumni Companies
 
             ![alumni_companies](images/kickoff_event/alumni_companies.png)
+          </section>
+
+          <section data-markdown>
+            ![tattoo](images/kickoff_event/tattoo.jpg)
           </section>
         </section>
 
@@ -158,6 +214,14 @@ tunisia
 
           <section data-markdown>
             ![uk_route](images/kickoff_event/uk_route.svg)
+          </section>
+
+          <section data-background="images/pirate_summit.jpg" data-notes="
+Pirate Summit is a global founders conference, where the StartupBus finalists
+will pitch to:
+
+650 founders and 200 investors.
+">
           </section>
 
           <section>
@@ -252,7 +316,6 @@ tunisia
           <section>
             <h3>Organisers</h3>
 
-
             <div class="profile-section first">
               <img src="images/kickoff_event/blank.jpg" style="width: 60px !important;" />
             </div>
@@ -278,10 +341,6 @@ tunisia
         </section>
 
         <section>
-          # Goal
-        </section>
-
-        <section>
           <section data-markdown data-notes="
 Let's say a big thank to our sponsors. Without their support, StartupBus wouldn't
 exist.
@@ -304,7 +363,9 @@ We wouldn't be able to take our participants on such an amazing trip!
           </section>
 
           <section data-markdown data-notes="
-Paul Papadimitrou, who will be giving a talk
+We'll kick-off a series of talks from our sponsors and partners. The goal to inspire both the participants and other attendees , as well.
+
+Paul Papadimitrou, who will be giving a talk on engineering digital transformation and innovation.
 
 Ridin' the Wave, a panel discussion on trending tech and its role in product development.
 ">
@@ -313,6 +374,8 @@ Ridin' the Wave, a panel discussion on trending tech and its role in product dev
             **Rich Phillips** — Arts Alliance Media
 
             **Becky Plummer** — Bloomberg
+
+            **Gregory Giagnocavo** — StartupAcademy
 
             **Paul Papadimitrou** — Founder of Intelligencr
 
